prevent zooming on iOS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
 @import "bootstrap";
 
+body {
+  touch-action: pan-y;
+}
+
 .sauce-image {
   display: flex;
   justify-content: center;
